tests/NormalTests/paczka1/small_fuzzy/54457273.err
Error in line 3: S76 S484 47,2
Error in line 1: 7cimYW A514 13,7
Error in line 5: S76 S76 71,0
